--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "fabric": "^6.6.1",
     "google-auth-library": "^6.1.3",
     "jwt-decode": "^3.1.2",
     "mongodb": "^6.13.0",
