--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "Ori3dita",
   "version": "1.0.0",
   "description": "",
-  "main": "server/server.js",
+  "main": "server/server.ts",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "nodemon"
+    "start": "nodemon --exec ts-node server/server.ts"
   },
   "repository": {
     "type": "git",
@@ -41,7 +41,14 @@
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
+    "@types/fabric": "^5.3.9",
+    "@types/mongoose": "^5.11.96",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "ts-node": "^10.9.2",
     "vite": "^4.0.0",
     "vite-plugin-svgr": "^2.4.0"
   }
