--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "node": ">=18.x"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@react-oauth/google": "^0.12.1",
+    "@tailwindcss/vite": "^4.0.8",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.8.1",
     "dotenv": "^16.0.3",
@@ -38,6 +41,7 @@
     "react-router-dom": "^6.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.0.8",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
@@ -49,7 +53,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "ts-node": "^10.9.2",
-    "vite": "^4.0.0",
-    "vite-plugin-svgr": "^2.4.0"
+    "vite": "^6.0.0",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
