--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "lint": "eslint --ext .js,.ts . && prettier --ignore-path .gitignore --check .",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "start": "nodemon --exec ts-node server/server.ts"
   },
   "repository": {
@@ -44,14 +46,22 @@
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/fabric": "^5.3.9",
     "@types/mongoose": "^5.11.96",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.2",
     "ts-node": "^10.9.2",
+    "typescript-eslint": "^8.24.1",
     "vite": "^6.0.0",
     "vite-plugin-svgr": "^4.3.0"
   }
