--- a/package.json
+++ b/package.json
@@ -44,10 +44,13 @@
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/fabric": "^5.3.9",
+    "@types/jest": "^29.5.14",
     "@types/mongoose": "^5.11.96",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "vite": "^4.0.0",
     "vite-plugin-svgr": "^2.4.0"
