--- a/fold_algos/CMakeLists.txt
+++ b/fold_algos/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.28)
 project(Ori3dta)
+set (CMAKE_CXX_STANDARD 20)
 
 include(FetchContent)
 
@@ -17,5 +18,17 @@ add_executable(test
   src/fold.cpp
   src/plane_group.cpp
   )
+
+
+add_executable(test_plane_group
+  src/test_plane_group.cpp
+  src/dsu.cpp
+  src/fold.cpp
+  src/plane_group.cpp
+  )
+
 target_include_directories(test PUBLIC include)
 target_link_libraries(test simdjson)
+
+target_include_directories(test_plane_group PUBLIC include)
+target_link_libraries(test_plane_group simdjson)
