--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.ts . && prettier --ignore-path .gitignore --check .",
+    "lint": "tsc --noEmit && eslint . && prettier --ignore-path .gitignore --check .",
     "format": "prettier --ignore-path .gitignore --write .",
     "start": "nodemon --exec ts-node server/server.ts"
   },
@@ -58,14 +58,15 @@
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
     "eslint": "^9.21.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.5.2",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.0.0",
     "vite-plugin-svgr": "^4.3.0"
