--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "fabric": "^6.6.1",
+    "fs": "^0.0.1-security",
     "google-auth-library": "^6.1.3",
     "jwt-decode": "^3.1.2",
     "mongodb": "^6.13.0",
@@ -54,6 +55,7 @@
     "@types/fabric": "^5.3.9",
     "@types/jest": "^29.5.14",
     "@types/mongoose": "^5.11.96",
+    "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
