--- a/fold_algos/CMakeLists.txt
+++ b/fold_algos/CMakeLists.txt
@@ -10,7 +10,20 @@ FetchContent_Declare(
   GIT_TAG  tags/v3.12.2
   GIT_SHALLOW TRUE)
 
-FetchContent_MakeAvailable(simdjson)
+#FetchContent_Declare(
+#  minisat
+#  GIT_REPOSITORY https://github.com/niklasso/minisat.git
+#  #  GIT_TAG releases/2.2.0
+#  GIT_TAG cd3a2d653fc073585ef05e2ebb72ab015d851279
+#  )
+
+FetchContent_Declare(
+  glucose
+  GIT_REPOSITORY https://github.com/audemard/glucose.git
+  GIT_TAG 4.2.1
+  GIT_SHALLOW TRUE)
+
+FetchContent_MakeAvailable(simdjson glucose)
 
 add_executable(test
   src/test.cpp
@@ -27,8 +40,14 @@ add_executable(test_plane_group
   src/plane_group.cpp
   )
 
-target_include_directories(test PUBLIC include)
-target_link_libraries(test simdjson)
+target_include_directories(test
+  PUBLIC include
+  PRIVATE "${FETCHCONTENT_BASE_DIR}/glucose-src/"
+)
+
+target_link_libraries(test
+  simdjson
+  glucose)
 
 target_include_directories(test_plane_group PUBLIC include)
 target_link_libraries(test_plane_group simdjson)
