--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,5 +8,5 @@
     "rootDir": "..",
     "strict": true
   },
-  "include": [".", "../dto"]
+  "include": [".", "../dto", "../client/src/types/fold.ts"]
 }
