--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.ts . && prettier --ignore-path .gitignore --check .",
     "format": "prettier --ignore-path .gitignore --write .",
     "start": "nodemon --exec ts-node server/server.ts"
   },
@@ -19,7 +18,7 @@
   "license": "ISC",
   "homepage": "",
   "engines": {
-    "node": ">=18.x"
+    "node": ">=18.18.x"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
@@ -30,7 +29,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "fabric": "^6.6.1",
+    "fabric": "^6.6.2",
     "google-auth-library": "^6.1.3",
     "jwt-decode": "^3.1.2",
     "mongodb": "^6.13.0",
@@ -46,11 +45,13 @@
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.7",
     "@eslint/js": "^9.21.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/fabric": "^5.3.9",
+    "@types/jest": "^29.5.14",
     "@types/mongoose": "^5.11.96",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -61,8 +62,11 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.5.2",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.0.0",
     "vite-plugin-svgr": "^4.3.0"
