--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.8",
+    "three": "^0.176.0",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
@@ -53,8 +54,9 @@
     "@types/fabric": "^5.3.9",
     "@types/jest": "^29.5.14",
     "@types/mongoose": "^5.11.96",
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.1.3",
     "@types/react-dom": "^19.0.4",
+    "@types/three": "^0.176.0",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
