--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "mongodb": "^6.13.0",
     "mongoose": "^7.8.3",
     "nodemon": "^3.1.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^6.0.0",
     "socket.io": "^4.8.1",
