API for calling layer solver

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 SESSION_SECRET="insert random string here"
 MONGO_SRV="your mongodb connection uri here"
 GOOGLE_CLIENT_ID="your google client id here"
+LAYER_ORDER_EXE="path to layer ordering executable"
