--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.8",
+    "tmp": "^0.2.3",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
@@ -55,6 +56,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/tmp": "^0.2.6",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
